[package]
name = "relic"
version = "0.0.8"
edition = "2018"
authors = ["phR0ze"]
license = "MIT OR Apache-2.0"
description = "Package management for Arch Linux"
readme = "README.md"
homepage = "https://github.com/phR0ze/relic"
repository = "https://github.com/phR0ze/relic"
exclude = [
  "docs",
  "examples",
  ".git",
  ".githooks",
  ".github",
  "tests",
  "benches",
  "target",
  ".vscode"
]

# Spliting the library from the binary with workspaces allows for a separation of
# dependencies so the binary dependencies aren't required for the library.
# path = <dependency> entries in dependencies are automatically included
[workspace]

# Higher the opt-level value the slower the compile time
[profile.release]
opt-level = 3   # Optimize for speed over size
lto = true      # Futher assist in optimization
debug = true    # Enable debug symbols for witcher

[profile.dev]
opt-level = 0   # Default no optimization

[dependencies]
witcher = "0.1.19"
tracing = "0.1"
tracing-subscriber = "0.2"
librelic = { path = "librelic" }
clap = { version = "2.33", default-features = false, features = ["suggestions"] }

# Examples and tests are built with these dependencies
[dev-dependencies]

# build.rs is built with these dependencies
[build-dependencies]