[package]
name = "librelic"
version = "0.0.11"
edition = "2018"
authors = ["phR0ze"]
license = "MIT OR Apache-2.0"
description = "Package management library for Arch Linux"
readme = "README.md"
homepage = "https://github.com/phR0ze/relic"
repository = "https://github.com/phR0ze/relic"
exclude = [
  "docs",
  "examples",
  ".git",
  ".githooks",
  ".github",
  "tests",
  "benches",
  "target",
  ".vscode"
]

[dependencies]
log = "0.4"
skellige = "0.1.7"
fungus = "0.1.19"
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }

# Examples and tests are built with these dependencies
[dev-dependencies]

# build.rs is built with these dependencies
[build-dependencies]
chrono = "0.4"
